--- a/style.css
+++ b/style.css
@@ -1,21 +1,21 @@
-*{
-    background-color: azure;
+
+.flex-content, .flex-table {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+    justify-content: space-around;
+    align-content: flex-start;
 }
 
-p{font-size: 16px;}
+.flex-table {
+background-color: rgb(42, 3, 61);
+color: white;
 
-table, th, tr, td{
-    border: 1px solid;
 }
 
-.arriba{
-    color: rgb(108, 26, 26);
-}
-
-.abajo{
-    color: rgb(97, 17, 208);
-}
-
-#enc1, #enc6{
-    font-weight: 400;
+.boxsize {
+    width: 100px;
+    border: 2px solid;
+    text-align: center;
+    padding: 10px;
 }
