Implementacipon de Bootstrap 5.3

--- a/estilos.css
+++ b/estilos.css
@@ -39,3 +39,23 @@
 }
 
 
+.flex-content, .flex-table {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+    justify-content: space-around;
+    align-content: flex-start;
+}
+
+.flex-table {
+background-color: rgb(42, 3, 61);
+color: white;
+
+}
+
+.boxsize {
+    width: 100px;
+    border: 2px solid;
+    text-align: center;
+    padding: 10px;
+}
